Add LoginRegisterFragment design. Cleanup code

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">restaurents</string>
+    <string name="app_logo_desc">Логотип приложения Еда Для Меня</string>
 </resources>
