--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">restaurents</string>
     <string name="app_logo_desc">Логотип приложения Еда Для Меня</string>
+    <!-- TODO: Remove or change this placeholder text -->
 </resources>
