--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">restaurents</string>
     <string name="app_logo_desc">Логотип приложения Еда Для Меня</string>
     <string name="reg">Регистрация</string>
+    <string name="login_button_text">Войти</string>
 </resources>
